<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <Button
        android:id="@+id/redBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="36dp"
        android:layout_weight="1"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/greenBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/blueBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="56dp"
        android:layout_weight="1"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/greenBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/greenBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="56dp"
        android:layout_weight="1"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/yellowBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="36dp"
        android:layout_weight="1"
        android:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/blueBtn"
        app:layout_constraintEnd_toStartOf="@+id/redBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/custom_button"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle"
        app:layout_constraintVertical_bias="0.203" />

    <TextView
        android:id="@+id/levelNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/levelNumber"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/dog_cap"
        tools:ignore="MissingConstraints" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/level"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/little_dog"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>